--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-hallelujah
-ugh
-why
-god hates me so much
+<!DOCTYPE html>
+<html>
+<head>
+  <title>willforeman.net</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>willforeman.net</h1>
+</body>
+</html>
