--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <h1>willforeman.net</h1>
   <hr>
   <div class="navbar">
-    <p>nav1</p>
-    <p>nav2</p>
-    <p>nav3</p> 
+    <a href="">nav1</a>
+    <a href="">nav2</a>
+    <a href="">nav3</a>
   </div>
   <hr>
   <div class="container">
