flex-direction test

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </div>
     <div class="box">
       <p>please work</p>
+      <p>testing flexbox</p>
+      <p>flex-direction pls</p>
     </div>
   </div>
 </body>
