--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="container">
-     <h1>blog archive</h1>
+     <h1>external links</h1>
      <div class="navbar">
       <a href="./index.html">home</a>
       <a href="./spinnakerreef.html">music</a>
@@ -15,11 +15,14 @@
       <a href="./links.html">links</a>
     </div>
     <div class="box">
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
+      <a target="_blank" rel="noopener noreferrer" href="http://marijn.uk">marijn.uk</a>
+      <a target="_blank" rel="noopener noreferrer" href="http://noclip.website">noclip.website</a>
+      <a target="_blank" rel="noopener noreferrer" href="http://nerdy-nights.nes.science">nerdy nights NES tutorial</a>
+      <a target="_blank" rel="noopener noreferrer" href="http://theodinproject.com">the odin project</a>
+      <a target="_blank" rel="noopener noreferrer" href="http://nand2tetris.org">nand2tetris</a>
+      <a target="_blank" rel="noopener noreferrer" href="http://lukesmith.xyz">luke smith</a>
+      <a target="_blank" rel="noopener noreferrer" href="http://ranprieur.com">ran prieur</a>
+      <a target="_blank" rel="noopener noreferrer" href="http://geohot.github.io/blog">geohot</a>
   </div>
     </div>
   </body>
