--- a/links.html
+++ b/links.html
@@ -17,7 +17,7 @@
     <div class="box">
       <a target="_blank" rel="noopener noreferrer" href="http://marijn.uk">marijn.uk</a>
       <a target="_blank" rel="noopener noreferrer" href="http://noclip.website">noclip.website</a>
-      <a target="_blank" rel="noopener noreferrer" href="http://nerdy-nights.nes.science">nerdy nights NES tutorial</a>
+      <a target="_blank" rel="noopener noreferrer" href="http://nerdy-nights.nes.science">nerdy nights</a>
       <a target="_blank" rel="noopener noreferrer" href="http://theodinproject.com">the odin project</a>
       <a target="_blank" rel="noopener noreferrer" href="http://nand2tetris.org">nand2tetris</a>
       <a target="_blank" rel="noopener noreferrer" href="http://lukesmith.xyz">luke smith</a>
