--- a/spinnakerreef.html
+++ b/spinnakerreef.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>blog archive</title>
+    <title>spinnaker reef</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
-     <h1>blog archive</h1>
+     <h1>spinnaker reef</h1>
      <div class="navbar">
       <a href="./index.html">home</a>
       <a href="./spinnakerreef.html">music</a>
@@ -15,11 +15,18 @@
       <a href="./links.html">links</a>
     </div>
     <div class="box">
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
+      <img src="./imgs/comma-splice.jpg">
+      <h3>comma splice (2018)</h3>
+      <div class="album-info">
+        <a href="./files/comma-splice.zip">download</a>
+        <a href="./lyrics/comma-splice-lyrics.html">lyrics</a>
+        <a href="./files/comma-splice-j-card.pdf">j-card</a>
+      </div>
+      <img src="./imgs/tiny-words.jpg">
+      <h3>tiny words (2018)</h3>
+      <div class="album-info">
+        <a href="./files/tiny-words.zip">download</a>
+        <a href="./lyrics/tiny-words-lyrics.html">lyrics</a>
   </div>
     </div>
   </body>
