--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
     <div class="box">
       <p>please work</p>
-      <p>testing flexbox</p>
-      <p>flex-direction pls</p>
+      <p>somehow i broke everything again</p>
+      <p>vultr pls</p>
     </div>
   </div>
 </body>
