big upload time

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="./links.html">links</a>
     </div>
     <div class="box">
-      <p>please work</p>
+      <p>oops</p>
       <p>somehow i broke everything again</p>
       <p>vultr pls</p>
     </div>
