--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <div class="container">
     <h1>willforeman.net</h1>
     <div class="navbar">
-      <a href="./blog.html">blog</a>
+      <a href="./index.html">home</a>
       <a href="./spinnakerreef.html">music</a>
       <a href="./photos.html">photos</a>
       <a href="./projects.html">projects</a>
       <a href="./links.html">links</a>
     </div>
     <div class="box">
-      <p>oops</p>
-      <p>somehow i broke everything again</p>
-      <p>vultr pls</p>
+      <p>welcome to my website</p>
+      <p>everything is working as intended</p>
+      <p>contact: billy@willforeman.net</p>
     </div>
   </div>
 </body>
