--- a/links.html
+++ b/links.html
@@ -15,15 +15,15 @@
       <a href="./links.html">links</a>
     </div>
     <div class="box">
-      <a target="_blank" rel="noopener noreferrer" href="http://marijn.uk">marijn.uk</a>
-      <a target="_blank" rel="noopener noreferrer" href="http://noclip.website">noclip.website</a>
-      <a target="_blank" rel="noopener noreferrer" href="http://nerdy-nights.nes.science">nerdy nights</a>
-      <a target="_blank" rel="noopener noreferrer" href="http://theodinproject.com">the odin project</a>
-      <a target="_blank" rel="noopener noreferrer" href="http://nand2tetris.org">nand2tetris</a>
-      <a target="_blank" rel="noopener noreferrer" href="http://lukesmith.xyz">luke smith</a>
-      <a target="_blank" rel="noopener noreferrer" href="http://ranprieur.com">ran prieur</a>
-      <a target="_blank" rel="noopener noreferrer" href="http://geohot.github.io/blog">geohot</a>
-      <a target="_blank" rel="noopener noreferrer" href="http://web.archive.org/web/20080105001815/http://carfreeuniverse.org/Members/jeffreysawyer/livinginquiry">jeffrey sawyer</a>
+      <a href="http://marijn.uk">marijn.uk</a>
+      <a href="http://noclip.website">noclip.website</a>
+      <a href="http://nerdy-nights.nes.science">nerdy nights</a>
+      <a href="http://theodinproject.com">the odin project</a>
+      <a href="http://nand2tetris.org">nand2tetris</a>
+      <a href="http://lukesmith.xyz">luke smith</a>
+      <a href="http://ranprieur.com">ran prieur</a>
+      <a href="http://geohot.github.io/blog">geohot</a>
+      <a href="http://web.archive.org/web/20080105001815/http://carfreeuniverse.org/Members/jeffreysawyer/livinginquiry">jeffrey sawyer</a>
   </div>
     </div>
   </body>
