--- a/lyrics/comma-splice-lyrics.html
+++ b/lyrics/comma-splice-lyrics.html
@@ -8,11 +8,11 @@
   <div class="container">
     <h1>comma splice lyrics</h1>
     <div class="navbar">
-      <a href="./index.html">home</a>
-      <a href="./spinnakerreef.html">music</a>
-      <a href="./photos.html">photos</a>
-      <a href="./projects.html">projects</a>
-      <a href="./links.html">links</a>
+      <a href="./../index.html">home</a>
+      <a href="./../spinnakerreef.html">music</a>
+      <a href="./../photos.html">photos</a>
+      <a href="./../projects.html">projects</a>
+      <a href="./../links.html">links</a>
     </div>
     <div class="box">
 <p>somewhere out by the parking lot there's a SUDDEN FEELING once forgot and you want to remember me with a taste of hidden sudden feeling. oh i know i never wanted to be all of the things that i say all of the things i don't mean unless you say you want me to. the other day is breaking me down and all that i have is right here right now alone in my room with nothing to do</p>
