--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>blog archive</title>
+    <title>projects</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
-     <h1>blog archive</h1>
+     <h1>projects</h1>
      <div class="navbar">
       <a href="./index.html">home</a>
       <a href="./spinnakerreef.html">music</a>
@@ -15,11 +15,11 @@
       <a href="./links.html">links</a>
     </div>
     <div class="box">
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
+      <a href="">project</a>
+      <a href="">project</a>
+      <a href="">project</a>
+      <a href="">project</a>
+      <a href="">project</a>
   </div>
     </div>
   </body>
