--- a/photos.html
+++ b/photos.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>blog archive</title>
+    <title>photos</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
-     <h1>blog archive</h1>
+     <h1>photos</h1>
      <div class="navbar">
       <a href="./index.html">home</a>
       <a href="./spinnakerreef.html">music</a>
@@ -14,12 +14,28 @@
       <a href="./projects.html">projects</a>
       <a href="./links.html">links</a>
     </div>
-    <div class="box">
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
-      <a href="">blog entry</a>
+    <div class="photo-box">
+      <img src="./imgs/acadia.jpg">
+      <img src="./imgs/arch.jpg">
+      <img src="./imgs/arlee.jpg">
+      <img src="./imgs/boat.jpg">
+      <img src="./imgs/carousel.jpg">
+      <img src="./imgs/cathedral.jpg">
+      <img src="./imgs/cows.jpg">
+      <img src="./imgs/dead-wood.jpg">
+      <img src="./imgs/devil-cactus.jpg">
+      <img src="./imgs/gateway.jpg">
+      <img src="./imgs/golden-gate.jpg">
+      <img src="./imgs/hollow-mountain.jpg">
+      <img src="./imgs/lighthouse.jpg">
+      <img src="./imgs/mazda2.jpg">
+      <img src="./imgs/mazda.jpg">
+      <img src="./imgs/modest-mouse.jpg">
+      <img src="./imgs/obx.jpg">
+      <img src="./imgs/sinclair.jpg">
+      <img src="./imgs/snoqualmie.jpg">
+      <img src="./imgs/twisters.jpg">
+      <img src="./imgs/walden.jpg">
   </div>
     </div>
   </body>
