--- a/spinnakerreef.html
+++ b/spinnakerreef.html
@@ -23,7 +23,7 @@
         <a href="./files/comma-splice-j-card.pdf">j-card</a>
       </div>
       <img src="./imgs/tiny-words.jpg">
-      <h3>tiny words (2018)</h3>
+      <h3>TINY WORDS (2018)</h3>
       <div class="album-info">
         <a href="./files/tiny-words.zip">download</a>
         <a href="./lyrics/tiny-words-lyrics.html">lyrics</a>
