adding rps project

--- a/projects.html
+++ b/projects.html
@@ -15,11 +15,7 @@
       <a href="./links.html">links</a>
     </div>
     <div class="box">
-      <a href="">project</a>
-      <a href="">project</a>
-      <a href="">project</a>
-      <a href="">project</a>
-      <a href="">project</a>
+      <a href="./projects/rps/index.html">rock paper scissors</a>
   </div>
     </div>
   </body>
