stupid stupid stupid

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="box">
       <p>welcome to my website</p>
       <p>everything is working as intended</p>
-      <p>contact: billy@willforeman.net</p>
+      <p>billy@willforeman.net</p>
     </div>
   </div>
 </body>
