--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="box">
       <p>welcome to my website</p>
       <p>everything is working as intended</p>
+      <p>updated 11/1/21</p>
       <p>billy@willforeman.net</p>
     </div>
   </div>
