--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
     </div>
     <div class="box">
       <a href="./projects/rps/index.html">rock paper scissors</a>
+      <a href="./projects/etch/index.html">etch-a-sketch</a>
   </div>
     </div>
   </body>
