--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>blog</title>
+  <title>secret blog</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>blog</h1>
+    <h1>secret blog</h1>
     <div class="navbar">
       <a href="./index.html">home</a>
       <a href="./spinnakerreef.html">music</a>
