--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     </div>
     <div class="box">
       <p>welcome to my website</p>
-      <p>updated 11/15/21</p>
+      <p>updated 11/13/21</p>
       <p>billy@willforeman.net</p>
+      <a href="./recipes.html">recipes</a>
     </div>
   </div>
 </body>
