--- a/recipes/tccc.html
+++ b/recipes/tccc.html
@@ -37,7 +37,8 @@
       <li>add GARLIC, GINGER, CORIANDER</li>
       <li>cook for 1 min, stirring frequently</li>
       <li>add COCONUT MILK, CARROTS, CURRY PASTE, SALT, PEPPER</li>
-      <li>reduce heat to medium and gently boil for ~5min, or until desired volume & thickness</li>
+      <li>reduce heat to medium</li>
+      <li>gently boil for ~5min, or until desired volume & thickness</li>
       <li>add SPINACH, LIME JUICE, BROWN SUGAR</li>
       <li>cook until SPINACH has wilted, abt 1-2 min</li>
       <li>sprinkle with cilanto, serve on rice</li>
