--- a/projects/rps/index.html
+++ b/projects/rps/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="header-container">
-    <h1>ROCK PAPER SCISSORS</h1>
+    <h1 id="title">ROCK PAPER SCISSORS</h1>
   </div>
   <div class="button-container">
     <button id="gb1">rock</button>
