--- a/recipes.html
+++ b/recipes.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>billy's recipes</h1>
-    <p><a href="./recipes/day-laborer-bibimslop.html">day laborer bibimslop</a></p>
+    <p><a href="./recipes/bibimslop.html">bibimslop</a></p>
     <p><a href="./recipes/tccc.html">thai coconut chicken curry</a></p>
   </body>
 </html>
