--- a/notes.html
+++ b/notes.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>willforeman.net</title>
+  <title>notes</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>willforeman.net</h1>
+    <h1>notes</h1>
     <div class="navbar">
       <a href="./index.html">home</a>
       <a href="./spinnakerreef.html">music</a>
@@ -15,11 +15,12 @@
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
     </div>
-    <div class="box">
-      <p>welcome to my website</p>
-      <p>updated 3/6/22</p>
-      <p>billy@willforeman.net</p>
+    <div id="notes-box">
+      <a class="align-left" href="./notebook/git-push-live-main.html">use git to update website</a>
+      <p class="align-right">date</p>
+      <a class="align-left" href="./notebook/bookshelf.html">bookshelf</a>
     </div>
+    <div style="clear: both;"></div>
   </div>
 </body>
 </html>
