--- a/photos.html
+++ b/photos.html
@@ -13,9 +13,10 @@
       <a href="./photos.html">photos</a>
       <a href="./projects.html">projects</a>
       <a href="./links.html">links</a>
+      <a href="./notes.html">notes</a>
     </div>
     <div class="photo-box">
-      <img src="./imgs/acadia.jpg">
+      <img src="./imgs/acadia.jpg" alt="hey">
       <img src="./imgs/arch.jpg">
       <img src="./imgs/arlee.jpg">
       <img src="./imgs/boat.jpg">
