--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,7 @@
       <a href="./photos.html">photos</a>
       <a href="./projects.html">projects</a>
       <a href="./links.html">links</a>
+      <a href="./notes.html">notes</a>
     </div>
     <div class="box">
       <a href="./projects/rps/index.html">rock paper scissors</a>
