--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
     </div>
     <div class="box">
       <p>welcome to my website</p>
-      <p>updated 3/6/22</p>
+      <p>updated 3/7/22</p>
       <p>billy@willforeman.net</p>
+    </div>
+    <div class="box">
+      <p>quick links</p>
+      <a href="./notebook/bookshelf.html">bookshelf</a>
+      <a href="./files/comma-splice.zip">comma splice download</a>
+      <a href="./projects/rps/index.html">rock paper scissors</a>
+      </div>
     </div>
   </div>
 </body>
