--- a/notes.html
+++ b/notes.html
@@ -15,12 +15,11 @@
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
     </div>
-    <div id="notes-box">
-      <a class="align-left" href="./notebook/git-push-live-main.html">use git to update website</a>
-      <p class="align-right">date</p>
-      <a class="align-left" href="./notebook/bookshelf.html">bookshelf</a>
+    <div class="box">
+      <a href="./notebook/git-push-live-main.html">use git to update website [coming soon]</a>
+      <a href="./notebook/bookshelf.html">bookshelf [mar 6 2022]</a>
+      <div style="clear:both;"></div>
     </div>
-    <div style="clear: both;"></div>
   </div>
 </body>
 </html>
