--- a/links.html
+++ b/links.html
@@ -35,6 +35,9 @@
       <a href="http://coranac.com/tonc/text/toc.htm">tonc</a>
       <a href="http://gbadev.org">gbadev</a>
       <a href="http://chibiakumas.com/6502/snes.php">chibiakumas</a>
+      <h2>me</h2>
+      <a href="http://github.com/bilfor">github</a>
+      <a href="http://news.ycombinator.com/user?id=goldtownjac">hacker news</a>
       <h2>under construction</h2>
       <a href="http://permawave.fm">permawave.fm</a>
   </div>
