--- a/notebook/bookshelf.html
+++ b/notebook/bookshelf.html
@@ -27,7 +27,7 @@
       <p>the 4-hour work week - tim ferriss</p>
       <p>the crying of lot 49 - thomas pynchon</p>
       <p>meditations - marcus aurelius</p>
-      <h2>favorites read before 2021</h2>
+      <h2>read before 2021</h2>
       <p>the stranger - albert camus</p>
       <p>norwegian wood - haruki murakami</p>
       <p>american psycho - bret easton ellis</p>
