spinnaker reef -> music

--- a/music.html
+++ b/music.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>spinnaker reef</title>
+    <title>music</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
-     <h1>spinnaker reef</h1>
+     <h1>music</h1>
      <div class="navbar">
       <a href="./index.html">home</a>
-      <a href="./spinnakerreef.html">music</a>
+      <a href="./music.html">music</a>
       <a href="./photos.html">photos</a>
       <a href="./projects.html">projects</a>
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
     </div>
     <div class="box">
+      <h1>spinnaker reef</h1>
       <img src="./imgs/comma-splice.jpg">
       <h3>comma splice (2018)</h3>
       <div class="album-info">
@@ -28,8 +29,13 @@
       <div class="album-info">
         <a href="./files/tiny-words.zip">download</a>
         <a href="./lyrics/tiny-words-lyrics.html">lyrics</a>
-  </div>
+      </div>
     </div>
+    <div class="box">
+      <h1>tabs</h1>
+      <a href="./tabs/southern-sky.txt">southern sky tab (alex g)</a> 
+    </div>
+  </div>
   </body>
 </html> 
 
