--- a/photos.html
+++ b/photos.html
@@ -9,7 +9,7 @@
      <h1>photos</h1>
      <div class="navbar">
       <a href="./index.html">home</a>
-      <a href="./spinnakerreef.html">music</a>
+      <a href="./music.html">music</a>
       <a href="./photos.html">photos</a>
       <a href="./projects.html">projects</a>
       <a href="./links.html">links</a>
