--- a/links.html
+++ b/links.html
@@ -9,14 +9,14 @@
      <h1>links</h1>
      <div class="navbar">
       <a href="./index.html">home</a>
-      <a href="./spinnakerreef.html">music</a>
+      <a href="./music.html">music</a>
       <a href="./photos.html">photos</a>
       <a href="./projects.html">projects</a>
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
     </div>
     <div class="box">
-      <h2>other people</h2>
+      <h1>other people</h1>
       <a href="http://marijn.uk">marijn.uk</a>
       <a href="http://lukesmith.xyz">luke smith</a>
       <a href="http://ranprieur.com">ran prieur</a>
@@ -28,18 +28,25 @@
       <a href="http://eater.net">ben eater</a>
       <a href="http://sam.zeloof.xyz">sam zeloof</a>
       <a href="http://neil.computer">neil panchal</a>
-      <h2>resources</h2>
+    </div>
+    <div class="box">
+      <h1>resources</h1>
       <a href="http://theodinproject.com">the odin project</a>
       <a href="http://copetti.org">copetti</a>
       <a href="http://nand2tetris.org">nand2tetris</a>
       <a href="http://coranac.com/tonc/text/toc.htm">tonc</a>
       <a href="http://gbadev.org">gbadev</a>
       <a href="http://chibiakumas.com/6502/snes.php">chibiakumas</a>
-      <h2>me</h2>
+    </div>
+    <div class="box">
+      <h1>me</h1>
       <a href="http://github.com/bilfor">github</a>
       <a href="http://news.ycombinator.com/user?id=goldtownjac">hacker news</a>
-      <h2>under construction</h2>
+    </div>
+    <div class="box">
+      <h1>under construction</h1>
       <a href="http://permawave.fm">permawave.fm</a>
+    </div>
   </div>
     </div>
   </body>
