heading size fixes

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <a href="./notes.html">notes</a>
     </div>
     <div class="box">
-      <p>welcome to my website</p>
+      <h2>welcome to my website</h2>
       <p>updated 3/7/22</p>
       <p>billy@willforeman.net</p>
     </div>
     <div class="box">
-      <p>quick links</p>
+      <h2>quick links</h2>
       <a href="./notebook/bookshelf.html">bookshelf</a>
       <a href="./files/comma-splice.zip">comma splice download</a>
       <a href="./projects/rps/index.html">rock paper scissors</a>
