--- a/links.html
+++ b/links.html
@@ -17,6 +17,7 @@
     </div>
     <div class="box">
       <h2>other people</h2>
+      <a href="http://nathanielnoy.es">nathaniel noyes</a>
       <a href="http://marijn.uk">marijn.uk</a>
       <a href="http://lukesmith.xyz">luke smith</a>
       <a href="http://ranprieur.com">ran prieur</a>
