marijn link rename

--- a/links.html
+++ b/links.html
@@ -18,7 +18,7 @@
     <div class="box">
       <h2>other people</h2>
       <a href="http://nathanielnoy.es">nathaniel noyes</a>
-      <a href="http://marijn.uk">marijn.uk</a>
+      <a href="http://marijn.uk">marijn van hoorn</a>
       <a href="http://lukesmith.xyz">luke smith</a>
       <a href="http://ranprieur.com">ran prieur</a>
       <a href="http://geohot.github.io/blog">geohot</a>
