--- a/notebook/bookshelf.html
+++ b/notebook/bookshelf.html
@@ -12,9 +12,9 @@
       <p>snow crash - neil stephenson</p>
       <p>code - charles petzold</p>
       <p>the WoW diary - john staats</p>
-      <h2>read in 2022</h2>
+      <h2>2022</h2>
       <p>vagabonding - rolf potts</p>
-      <h2>read in 2021</h2>
+      <h2>2021</h2>
       <p>1985 - george orwell</p>
       <p>brave new world - aldous huxley</p>
       <p>submission - michel houellebecq</p>
@@ -27,7 +27,7 @@
       <p>the 4-hour work week - tim ferriss</p>
       <p>the crying of lot 49 - thomas pynchon</p>
       <p>meditations - marcus aurelius</p>
-      <h2>read before 2021</h2>
+      <h2>pre-2021</h2>
       <p>the stranger - albert camus</p>
       <p>norwegian wood - haruki murakami</p>
       <p>american psycho - bret easton ellis</p>
