--- a/links.html
+++ b/links.html
@@ -43,6 +43,7 @@
       <h2>me</h2>
       <a href="http://github.com/bilfor">github</a>
       <a href="http://news.ycombinator.com/user?id=goldtownjac">hacker news</a>
+      <a href="http://last.fm/user/mothfingers">last.fm</a>
     </div>
     <div class="box">
       <h2>under construction</h2>
