--- a/notebook/bookshelf.html
+++ b/notebook/bookshelf.html
@@ -27,10 +27,11 @@
       <p>the 4-hour work week - tim ferriss</p>
       <p>the crying of lot 49 - thomas pynchon</p>
       <p>meditations - marcus aurelius</p>
-      <h2>pre-2021</h2>
+      <h2>1998-2020</h2>
       <p>the stranger - albert camus</p>
       <p>norwegian wood - haruki murakami</p>
       <p>american psycho - bret easton ellis</p>
+      <p>the elementary particles - michel houellebecq</p>
       <p>ender's game (and saga) - orson scott card</p>
       <p>ender's shadow (and saga) - orson scott card</p>
     </div>
