--- a/notebook/bookshelf.html
+++ b/notebook/bookshelf.html
@@ -9,13 +9,13 @@
     <h1>bookshelf</h1>
     <div class="box">
       <h2>currently reading</h2>
-      <p>snow crash - neil stephenson</p>
+      <p>snow crash - neal stephenson</p>
       <p>code - charles petzold</p>
       <p>the WoW diary - john staats</p>
       <h2>2022</h2>
       <p>vagabonding - rolf potts</p>
       <h2>2021</h2>
-      <p>1985 - george orwell</p>
+      <p>1984 - george orwell</p>
       <p>brave new world - aldous huxley</p>
       <p>submission - michel houellebecq</p>
       <p>platform - michel houellebecq</p>
@@ -32,8 +32,8 @@
       <p>norwegian wood - haruki murakami</p>
       <p>american psycho - bret easton ellis</p>
       <p>the elementary particles - michel houellebecq</p>
-      <p>ender's game (and saga) - orson scott card</p>
-      <p>ender's shadow (and saga) - orson scott card</p>
+      <p>ender's game saga - orson scott card</p>
+      <p>ender's shadow saga - orson scott card</p>
     </div>
   </div>
 </body>
