--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
     </div>
     <div class="box">
       <h2>welcome to my website</h2>
-      <p>updated 3/7/22</p>
+      <p>updated 3/12/22</p>
       <p>billy@willforeman.net</p>
     </div>
     <div class="box">
       <h2>quick links</h2>
-      <a href="./notebook/bookshelf.html">bookshelf</a>
+      <a href="./notebook/bookshelf.html">
+        <img src="./imgs/assets/new2.gif" style="all:unset">
+        bookshelf
+        <img src="./imgs/assets/new2.gif" style="all:unset">
+      </a>
       <a href="./files/comma-splice.zip">comma splice download</a>
       <a href="./projects/rps/index.html">rock paper scissors</a>
       </div>
