--- a/links.html
+++ b/links.html
@@ -40,7 +40,7 @@
       <a href="http://chibiakumas.com/6502/snes.php">chibiakumas</a>
     </div>
     <div class="box">
-      <h2>me</h2>
+      <h2>my profiles</h2>
       <a href="http://github.com/bilfor">github</a>
       <a href="http://news.ycombinator.com/user?id=goldtownjac">hacker news</a>
       <a href="http://last.fm/user/mothfingers">last.fm</a>
