mobile width test

--- a/photos.html
+++ b/photos.html
@@ -3,6 +3,7 @@
   <head>
     <title>photos</title>
     <link rel="stylesheet" href="style.css">
+    <script src="photos.js"></script>
   </head>
   <body>
     <div class="container">
@@ -16,7 +17,7 @@
       <a href="./notes.html">notes</a>
     </div>
     <div class="photo-box">
-      <img src="./imgs/acadia.jpg" alt="hey">
+      <img src="./imgs/acadia.jpg" alt="hey" class="enwiden">
       <img src="./imgs/arch.jpg">
       <img src="./imgs/arlee.jpg">
       <img src="./imgs/boat.jpg">
