--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
     </div>
+    <div class = "box">
+      <img id="wet-pet" src="./imgs/The_wet_pet.webp">
+    </div>
     <div class="box">
       <h2>welcome to my website</h2>
-      <p>updated 3/12/22</p>
+      <p>updated 3/23/22</p>
       <p>billy@willforeman.net</p>
     </div>
     <div class="box">
@@ -29,7 +32,6 @@
       </a>
       <a href="./files/comma-splice.zip">comma splice download</a>
       <a href="./projects/rps/index.html">rock paper scissors</a>
-      </div>
     </div>
   </div>
 </body>
