--- a/notes.html
+++ b/notes.html
@@ -18,6 +18,7 @@
     <div class="box">
       <a href="./notebook/git-push-live-main.html">use git to update website [coming soon]</a>
       <a href="./notebook/bookshelf.html">bookshelf [mar 6 2022]</a>
+      <a href="./notebook/gamelog.html">game log [jun 22 2022]</a>
       <div style="clear:both;"></div>
     </div>
   </div>
