--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     </div>
     <div class="box">
       <h2>quick links</h2>
-      <a href="./notebook/bookshelf.html">
+      <a href="./notebook/gamelog.html">
         <img src="./imgs/assets/new2.gif" style="all:unset">
-        bookshelf
+        gamelog
         <img src="./imgs/assets/new2.gif" style="all:unset">
       </a>
+      <a href="./notebook/bookshelf.html">bookshelf</a>
       <a href="./files/comma-splice.zip">comma splice download</a>
       <a href="./projects/rps/index.html">rock paper scissors</a>
     </div>
