book & game updates

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="box">
       <h2>welcome to my website</h2>
-      <p>updated 6/22/22</p>
+      <p>updated 7/6/22</p>
       <p>billy@willforeman.net</p>
     </div>
     <div class="box">
@@ -30,7 +30,11 @@
         gamelog
         <img src="./imgs/assets/new2.gif" style="all:unset">
       </a>
-      <a href="./notebook/bookshelf.html">bookshelf</a>
+      <a href="./notebook/bookshelf.html">
+        <img src="./imgs/assets/new2.gif" style="all:unset">
+        bookshelf
+        <img src="./imgs/assets/new2.gif" style="all:unset">
+      </a>
       <a href="./files/comma-splice.zip">comma splice download</a>
       <a href="./projects/rps/index.html">rock paper scissors</a>
     </div>
