--- a/notebook/gamelog.html
+++ b/notebook/gamelog.html
@@ -9,10 +9,16 @@
     <h1>game log</h1>
     <div class="box">
       <h2>currently playing</h2>
-      <p>jak 2 (ps2)</p>
+      <p>pokemon emerald (gba)</p>
+      <p>super mario advance (gba)</p>
       <h2>2022</h2>
       <p>spider-man ii: enter electro (ps1)</p>
-      <p>jak & daxter (ps2)</p>
+      <p>super mario all-stars (snes)</p>
+      <li>super mario bros</li>
+      <p>jak & daxter collection (ps3)</p>
+      <li>jak & daxter</li>
+      <li>jak 2</li>
+      <li>jak 3</li>
     </div>
   </div>
 </body>
