--- a/notebook/bookshelf.html
+++ b/notebook/bookshelf.html
@@ -9,11 +9,16 @@
     <h1>bookshelf</h1>
     <div class="box">
       <h2>currently reading</h2>
-      <p>snow crash - neal stephenson</p>
       <p>code - charles petzold</p>
       <p>the WoW diary - john staats</p>
+      <p>looking for calvin & hobbes - nevin martell</p>
       <h2>2022</h2>
       <p>vagabonding - rolf potts</p>
+      <p>snow crash - neal stephenson</p>
+      <p>on the road - jack kerouac</p>
+      <p>phenethylamines I have known and loved - alexander shulgin & ann shulgin</p>
+      <p>anything you want - derek sivers</p>
+      <p>the only rule is it has to work - ben lindbergh + sam miller</p>
       <h2>2021</h2>
       <p>1984 - george orwell</p>
       <p>brave new world - aldous huxley</p>
