dates removed on eternal notes

--- a/notes.html
+++ b/notes.html
@@ -16,9 +16,9 @@
       <a href="./notes.html">notes</a>
     </div>
     <div class="box">
-      <a href="./notebook/git-push-live-main.html">use git to update website [coming soon]</a>
-      <a href="./notebook/bookshelf.html">bookshelf [mar 6 2022]</a>
-      <a href="./notebook/gamelog.html">game log [jun 22 2022]</a>
+      <a href="./notebook/git-push-live-main.html">use git to update website</a>
+      <a href="./notebook/bookshelf.html">bookshelf</a>
+      <a href="./notebook/gamelog.html">game log</a>
       <div style="clear:both;"></div>
     </div>
   </div>
