--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="./notes.html">notes</a>
     </div>
     <div class = "box">
-      <img id="wet-pet" src="./imgs/cnh.JPG">
+      <img id="wet-pet" src="./imgs/cnh.JPG" style="width: 100%;">
     </div>
     <div class="box">
       <h2>welcome to my website</h2>
