--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="./notes.html">notes</a>
     </div>
     <div class = "box">
-      <img src="./imgs/cnh.JPG">
+      <img id="potm" src="./imgs/cnh.JPG">
     </div>
     <div class="box">
       <h2>welcome to my website</h2>
