--- a/projects/rps/index.html
+++ b/projects/rps/index.html
@@ -13,7 +13,7 @@
     <button id="gb2">paper</button>
     <button id="gb3">scissors</button>
   </div>
-  <div id="results"><h3>RESULTS:</h3></div>
+  <div id="results"><h3>ROUND RESULTS:</h3></div>
   <div id="score"><h3>SCORE (BO5):</h3></div>
   <div id="winner"><h3>WINNER:</h3></div>
 
