--- a/projects/etch/index.html
+++ b/projects/etch/index.html
@@ -6,7 +6,10 @@
     <script type="text/javascript" src="etch.js" defer></script>
   </head>
   <body>
-    <button id="reset" onclick="reset()">reset</button>
-    <div id="container"></div>
+    <div id="container">
+      <h1>etch-a-sketch!</h1>
+      <div id="drawspace"></div>
+      <button id="reset" onclick="reset()">reset and/or change pixel size</button>
+    </div>
   </body>
 </html>
