--- a/notes.html
+++ b/notes.html
@@ -19,6 +19,7 @@
       <a href="./notebook/git-push-live-main.html">use git to update website</a>
       <a href="./notebook/bookshelf.html">bookshelf</a>
       <a href="./notebook/gamelog.html">game log</a>
+      <a href="./notebook/welcome-photo-archive.html">welcome photo archive</a>
       <div style="clear:both;"></div>
     </div>
   </div>
