--- a/projects/etch/index.html
+++ b/projects/etch/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="container">
       <h1>etch-a-sketch!</h1>
+      <h4>hover over the drawing area to start filling in pixels</h4>
       <div id="drawspace"></div>
       <button id="reset" onclick="reset()">reset and/or change pixel size</button>
     </div>
