--- a/notebook/bookshelf.html
+++ b/notebook/bookshelf.html
@@ -19,6 +19,7 @@
       <p>anything you want - derek sivers</p>
       <p>the only rule is it has to work - ben lindbergh + sam miller</p>
       <p>looking for calvin & hobbes - nevin martell</p>
+      <p>disrupted - dan lyons</p>
       <h2>2021</h2>
       <p>1984 - george orwell</p>
       <p>brave new world - aldous huxley</p>
