--- a/notebook/gamelog.html
+++ b/notebook/gamelog.html
@@ -9,16 +9,13 @@
     <h1>game log</h1>
     <div class="box">
       <h2>currently playing</h2>
+      <p>world of warcraft: wrath of the lich king classic (pc)</p>
       <p>pokemon emerald (gba)</p>
-      <p>super mario advance (gba)</p>
       <h2>2022</h2>
       <p>spider-man ii: enter electro (ps1)</p>
       <p>super mario all-stars (snes)</p>
-      <li>super mario bros</li>
       <p>jak & daxter collection (ps3)</p>
-      <li>jak & daxter</li>
-      <li>jak 2</li>
-      <li>jak 3</li>
+      <p>harvest moon: friends of mineral town (gba)</p>
     </div>
   </div>
 </body>
