--- a/notebook/bookshelf.html
+++ b/notebook/bookshelf.html
@@ -9,8 +9,8 @@
     <h1>bookshelf</h1>
     <div class="box">
       <h2>currently reading</h2>
+      <p>wolf in white van - john darnielle</p>
       <p>code - charles petzold</p>
-      <p>the WoW diary - john staats</p>
       <h2>2022</h2>
       <p>vagabonding - rolf potts</p>
       <p>snow crash - neal stephenson</p>
@@ -20,6 +20,8 @@
       <p>the only rule is it has to work - ben lindbergh + sam miller</p>
       <p>looking for calvin & hobbes - nevin martell</p>
       <p>disrupted - dan lyons</p>
+      <p>kitchen confidential - anthony bourdain</p>
+      <p>the WoW diary - john staats</p>
       <h2>2021</h2>
       <p>1984 - george orwell</p>
       <p>brave new world - aldous huxley</p>
