paneer makhani recipe added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="box">
       <h2>welcome to my website</h2>
-      <p>updated 10/10/22</p>
+      <p>updated 10/27/22</p>
       <p>mail@willforeman.net</p>
     </div>
     <div class="box">
@@ -36,6 +36,7 @@
         <img src="./imgs/assets/new2.gif" style="all:unset">
       </a>
       <a href="./projects/rps/index.html">rock paper scissors</a>
+      <a href="./recipes/makhani.html">paneer makhani recipe</a>
     </div>
   </div>
 </body>
