--- a/recipes.html
+++ b/recipes.html
@@ -8,6 +8,7 @@
 
   <body>
     <h1>billy's recipes</h1>
+    <p><a href="./recipes/makhani.html">makhani</a></p>
     <p><a href="./recipes/bibimslop.html">bibimslop</a></p>
     <p><a href="./recipes/tccc.html">thai coconut chicken curry</a></p>
   </body>
