--- a/index.html
+++ b/index.html
@@ -15,29 +15,14 @@
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
     </div>
-    <div class = "box">
-      <img id="potm" src="./imgs/cnh.JPG">
-    </div>
-    <div class="box">
-      <h2>welcome to my website</h2>
-      <p>updated 10/27/22</p>
-      <p>mail@willforeman.net</p>
-    </div>
-    <div class="box">
-      <h2>quick links</h2>
-      <a href="./notebook/gamelog.html">
-        <img src="./imgs/assets/new2.gif" style="all:unset">
-        gamelog
-        <img src="./imgs/assets/new2.gif" style="all:unset">
-      </a>
-      <a href="./notebook/bookshelf.html">
-        <img src="./imgs/assets/new2.gif" style="all:unset">
-        bookshelf
-        <img src="./imgs/assets/new2.gif" style="all:unset">
-      </a>
-      <a href="./projects/rps/index.html">rock paper scissors</a>
-      <a href="./recipes/makhani.html">paneer makhani recipe</a>
-    </div>
+    <h2>welcome to my website</h2>
+    <p>updated 11/04/22</p>
+    <p>mail@willforeman.net</p>
+  </div>
+  <h2>quick links</h2>
+  <ul>
+    <li><a href="./notebook/bookshelf.html">bookshelf</a></li>
+    <li><a href="./recipes/makhani.html">paneer makhani recipe</a></li>  </ul>
   </div>
 </body>
 </html>
