--- a/notebook/bookshelf.html
+++ b/notebook/bookshelf.html
@@ -9,7 +9,7 @@
     <h1>bookshelf</h1>
     <div class="box">
       <h2>currently reading</h2>
-      <p>wolf in white van - john darnielle</p>
+      <p>hands-on rust - hervert wolverson</p>
       <p>code - charles petzold</p>
       <h2>2022</h2>
       <p>vagabonding - rolf potts</p>
@@ -22,6 +22,7 @@
       <p>disrupted - dan lyons</p>
       <p>kitchen confidential - anthony bourdain</p>
       <p>the WoW diary - john staats</p>
+      <p>wolf in white van - john darnielle</p>
       <h2>2021</h2>
       <p>1984 - george orwell</p>
       <p>brave new world - aldous huxley</p>
