--- a/notes.html
+++ b/notes.html
@@ -15,13 +15,13 @@
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
     </div>
-    <div class="box">
-      <a href="./notebook/git-push-live-main.html">use git to update website</a>
-      <a href="./notebook/bookshelf.html">bookshelf</a>
-      <a href="./notebook/gamelog.html">game log</a>
-      <a href="./notebook/welcome-photo-archive.html">welcome photo archive</a>
-      <div style="clear:both;"></div>
+    <br>
+    <ul>
+      <li><a href="./notebook/git-push-live-main.html">use git to update website</a></li>
+      <li><a href="./notebook/bookshelf.html">bookshelf</a></li>
+      <li><a href="./notebook/gamelog.html">gamer log</a></li>
+      <li><a href="./notebook/welcome-photo-archive.html">welcome photo archive</a></li>
+    </ul>  
     </div>
-  </div>
 </body>
 </html>
