--- a/photos.html
+++ b/photos.html
@@ -16,7 +16,8 @@
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
     </div>
-    <div class="box">
+    <br>
+    <div class="photodiv">
       <img src="./imgs/acadia.jpg" alt="hey" class="enwiden">
       <img src="./imgs/arch.jpg">
       <img src="./imgs/arlee.jpg">
