--- a/projects.html
+++ b/projects.html
@@ -15,11 +15,15 @@
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
     </div>
-    <div class="box">
-      <a href="./projects/rps/index.html">rock paper scissors</a>
-      <a href="./projects/etch/index.html">etch-a-sketch</a>
-  </div>
-    </div>
+    <h3>JS</h3>
+    <ul>
+      <li><a href="./projects/rps/index.html">rock paper scissors</a></li>
+      <li><a href="./projects/etch/index.html">etch-a-sketch</a></li>
+    </ul>
+    <h3>rust</h3>
+    <ul>
+      <li><a href="./projects/flappy/flappy.exe">flappy download</a></li>
+    </ul>    
   </body>
 </html> 
 
