currently reading universal harvester

--- a/notebook/bookshelf.html
+++ b/notebook/bookshelf.html
@@ -10,7 +10,7 @@
     <div class="box">
       <h2>currently reading</h2>
       <p>hands-on rust - hervert wolverson</p>
-      <p>code - charles petzold</p>
+      <p>universal harvester - john darnielle</p>
       <h2>2022</h2>
       <p>vagabonding - rolf potts</p>
       <p>snow crash - neal stephenson</p>
