--- a/recipes.html
+++ b/recipes.html
@@ -8,8 +8,11 @@
 
   <body>
     <h1>billy's recipes</h1>
-    <p><a href="./recipes/makhani.html">makhani</a></p>
-    <p><a href="./recipes/bibimslop.html">bibimslop</a></p>
-    <p><a href="./recipes/tccc.html">thai coconut chicken curry</a></p>
+    <ul>
+      <li><a href="./recipes/saag.html">saag paneer</a></li>
+      <li><a href="./recipes/makhani.html">paneer makhani</a></li>
+      <li><a href="./recipes/bibimslop.html">keto mexican bibimslop</a></li>
+      <li><a href="./recipes/tccc.html">thai coconut chicken curry</a></li>
+    </ul>
   </body>
 </html>
