--- a/recipes/makhani.html
+++ b/recipes/makhani.html
@@ -1,9 +1,9 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>paneer makhani</title>
     <meta charset "UTF-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
 
   <body>
