--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>willforeman.net</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="shortcut icon" type="image/ico" href="favicon.ico">
 </head>
 <body>
   <div class="container">
