larbs button added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <li><a href="./recipes/makhani.html">paneer makhani recipe</a></li>
     <li><a href="./projects/flappy/flappy.exe">flappy game download</a></li>
   </ul>
+  <br>
+  <a href = "http://larbs.xyz"><img src = "./imgs/larbs.gif" class="pin"></a>
   </div>
 </body>
 </html>
