universal harvester read

--- a/notebook/bookshelf.html
+++ b/notebook/bookshelf.html
@@ -10,7 +10,7 @@
     <div class="box">
       <h2>currently reading</h2>
       <p>hands-on rust - hervert wolverson</p>
-      <p>universal harvester - john darnielle</p>
+      <p>devil house - john darnielle</p>
       <h2>2022</h2>
       <p>vagabonding - rolf potts</p>
       <p>snow crash - neal stephenson</p>
@@ -23,6 +23,7 @@
       <p>kitchen confidential - anthony bourdain</p>
       <p>the WoW diary - john staats</p>
       <p>wolf in white van - john darnielle</p>
+      <p>universal harvester - john darnielle</p>
       <h2>2021</h2>
       <p>1984 - george orwell</p>
       <p>brave new world - aldous huxley</p>
