started git blog

--- a/notebook/git-push-live-main.html
+++ b/notebook/git-push-live-main.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>use git to update website</title>
+  <title>how I use git to update this website</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <div class="container">
-    <h1>use git to update website</h1>
-    <div class="box">
-      <p>coming soon</p>
-    </div>
+    <h1>how I use git to update this website</h1>
+    <p>When I figured this out, there were no clear guides (IMO) and it was all black magic to me. After changing my OS, I had to do it again, and it was easier this time. So here we go. This is exactly how I do it, so maybe some of it won't be accurate to your application.</p>
+
+    <p>prereqs</p>
+    <ul>
+	    <li>a web server. I use the most basic plan at <a href="http://www.vultr.com">Vultr</a></li>
+
   </div>
 </body>
 </html>
