--- a/notes.html
+++ b/notes.html
@@ -17,11 +17,11 @@
     </div>
     <br>
     <ul>
-      <li><a href="./notebook/git-push-live-main.html">use git to update website</a></li>
+      <li><a href="./notebook/git-push-live-main.html">how I use git to update this website (under construction)</a></li>
       <li><a href="./notebook/bookshelf.html">bookshelf</a></li>
       <li><a href="./notebook/gamelog.html">gamer log</a></li>
       <li><a href="./recipes.html">recipe book</a></li>
-    </ul>  
+    </ul>
     </div>
 </body>
 </html>
