--- a/notes.html
+++ b/notes.html
@@ -19,7 +19,8 @@
     <ul>
       <li><a href="./notebook/git-push-live-main.html">how I use git to update this website (under construction)</a></li>
       <li><a href="./notebook/bookshelf.html">bookshelf</a></li>
-      <li><a href="./notebook/gamelog.html">gamer log</a></li>
+      <li><a href="./notebook/gamelog.html">vidya log</a></li>
+      <li><a href="./notebook/tv.html">tv log</a></li>
       <li><a href="./recipes.html">recipe book</a></li>
     </ul>
     </div>
