--- a/notebook/bookshelf.html
+++ b/notebook/bookshelf.html
@@ -11,7 +11,7 @@
       <h2>currently reading</h2>
       <p>hands-on rust - hervert wolverson</p>
       <p>devil house - john darnielle</p>
-      <p>hunter x hunter - yoshihiro togashi</p>
+      <p>hunter x hunter (v17) - yoshihiro togashi</p>
       <h2>2022</h2>
       <p>vagabonding - rolf potts</p>
       <p>snow crash - neal stephenson</p>
