Added shows, posts, + some minor re-org

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
       <a href="./projects.html">projects</a>
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
+      <a href="./posts.html">posts</a>
     </div>
-    <h2>welcome to my website</h2>
-    <p>updated 11/19/22</p>
+    <h3>welcome to my website</h3>
+    <p>updated 12/09/22</p>
     <p>mail@willforeman.net</p>
   </div>
-  <h2>quick links</h2>
+  <h3>quick links</h3>
   <ul>
-    <li><a href="./notebook/bookshelf.html">bookshelf</a></li>
+    <li><a href="./logs/bookshelf.html">bookshelf</a></li>
     <li><a href="./recipes/makhani.html">paneer makhani recipe</a></li>
     <li><a href="./projects/flappy/flappy.exe">flappy game download</a></li>
   </ul>
