--- a/notes.html
+++ b/notes.html
@@ -14,14 +14,21 @@
       <a href="./projects.html">projects</a>
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
+      <a href="./posts.html">posts</a>
     </div>
-    <br>
+    <h3>logs</h3>
     <ul>
-      <li><a href="./notebook/git-push-live-main.html">how I use git to update this website (under construction)</a></li>
-      <li><a href="./notebook/bookshelf.html">bookshelf</a></li>
-      <li><a href="./notebook/gamelog.html">vidya log</a></li>
-      <li><a href="./notebook/tv.html">tv log</a></li>
-      <li><a href="./recipes.html">recipe book</a></li>
+      <li><a href="./logs/bookshelf.html">bookshelf</a></li>
+      <li><a href="./logs/vidya.html">vidya</a></li>
+      <li><a href="./logs/tv.html">tv</a></li>
+      <li><a href="./logs/shows.html">shows</a></li>
+    </ul>
+    <h3>recipes</h3>
+    <ul>
+      <li><a href="./recipes/saag.html">saag paneer</a></li>
+      <li><a href="./recipes/makhani.html">paneer makhani</a></li>
+      <li><a href="./recipes/bibimslop.html">keto mexican bibimslop</a></li>
+      <li><a href="./recipes/tccc.html">thai coconut chicken curry</a></li>
     </ul>
     </div>
 </body>
