--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,7 @@
       <a href="./projects.html">projects</a>
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
+      <a href="./posts.html">posts</a>
     </div>
     <h3>JS</h3>
     <ul>
