--- a/music.html
+++ b/music.html
@@ -14,6 +14,7 @@
       <a href="./projects.html">projects</a>
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
+      <a href="./posts.html">posts</a>
     </div>
     <h3>comma splice (2018)</h3>
     <img src="./imgs/comma-splice.jpg">
@@ -30,7 +31,7 @@
       <a href="./files/tiny-words.zip">download</a>
       <a href="./lyrics/tiny-words-lyrics.html">lyrics</a>
     </div>
-    <h2>tabs</h2>
+    <h3>tabs</h3>
     <a href="./tabs/southern-sky.txt">southern sky tab (alex g)</a> 
     </div>
   </div>
