--- a/photos.html
+++ b/photos.html
@@ -15,6 +15,7 @@
       <a href="./projects.html">projects</a>
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
+      <a href="./posts.html">posts</a>
     </div>
     <br>
     <div class="photodiv">
