Yaki udon recipe added

--- a/notes.html
+++ b/notes.html
@@ -29,6 +29,7 @@
       <li><a href="./recipes/makhani.html">paneer makhani</a></li>
       <li><a href="./recipes/bibimslop.html">keto mexican bibimslop</a></li>
       <li><a href="./recipes/tccc.html">thai coconut chicken curry</a></li>
+      <li><a href="./recipes/udon.html">yaki udon</a></li>
     </ul>
     </div>
 </body>
