--- a/music.html
+++ b/music.html
@@ -16,7 +16,14 @@
       <a href="./notes.html">notes</a>
       <a href="./posts.html">posts</a>
     </div>
-    <h3>comma splice (2018)</h3>
+   <h3>thomas no doki doki playground (2020)</h3>
+    <img src="./imgs/doki-doki.jpg">
+  
+    <div class="album-info">
+      <a href="./files/doki-doki.zip">download</a>
+      <a href="./lyrics/doki-doki-lyrics.html">lyrics</a>
+    </div>
+   <h3>comma splice (2018)</h3>
     <img src="./imgs/comma-splice.jpg">
   
     <div class="album-info">
